--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "jest-dom": "^3.1.2"
+    "jest-dom": "^3.1.2",
+    "react-test-renderer": "^16.8.6"
   }
 }
